--- a/CallBack2.cls
+++ b/CallBack2.cls
@@ -35,7 +35,7 @@ If Forms.count = 0 Then Exit Property
 If RHS Then
 Form1.Visible = True
 Form1.WindowState = 0
-If Form1.top >= VirtualScreenHeight Then Form1.Move ScrInfo(Console).Left, ScrInfo(Console).top
+If Form1.top >= VirtualScreenHeight Then Form1.move ScrInfo(Console).Left, ScrInfo(Console).top
 Else
 If Form1.WindowState = 0 Then
 If Not (QRY Or GFQRY Or Forms.count > 5) Then Form1.Visible = False
@@ -114,12 +114,12 @@ Else
         On Error Resume Next
         If mName$ <> "" Then
             mObjRef.Run mName$ + "_ErrorAtt", what
-            If Err Then Err.clear: mObjRef.Run mName$ + ":ErrorAtt", what
+            If Err Then Err.Clear: mObjRef.Run mName$ + ":ErrorAtt", what
             
         Else
             mObjRef.Run "ErrorAtt", what
         End If
-        Err.clear
+        Err.Clear
         If what = True Then
             Reset
         Else
@@ -167,12 +167,12 @@ If Not GetSubFullName2(myUcase(modulename$, True), full$, where) Then
         On Error Resume Next
         If mName$ <> "" Then
             mObjRef.Run mName$ + "_ErrorAtt", what
-            If Err Then Err.clear: mObjRef.Run mName$ + ":ErrorAtt", what
+            If Err Then Err.Clear: mObjRef.Run mName$ + ":ErrorAtt", what
             
         Else
             mObjRef.Run "ErrorAtt", what
         End If
-        Err.clear
+        Err.Clear
         If what = True Then
             Reset
         Else
@@ -275,12 +275,12 @@ If probe <> 1 Then
         On Error Resume Next
         If mName$ <> "" Then
             mObjRef.Run mName$ + "_ErrorAtt", what
-            If Err Then Err.clear: mObjRef.Run mName$ + ":ErrorAtt", what
+            If Err Then Err.Clear: mObjRef.Run mName$ + ":ErrorAtt", what
             
         Else
             mObjRef.Run "ErrorAtt", what
         End If
-        Err.clear
+        Err.Clear
         If what = True Then
             Reset
         Else
@@ -395,12 +395,12 @@ If mObjRef Is Nothing Then
         On Error Resume Next
         If mName$ <> "" Then
             mObjRef.Run mName$ + "_ErrorAtt", stay
-            If Err Then Err.clear: mObjRef.Run mName$ + ":ErrorAtt", stay
+            If Err Then Err.Clear: mObjRef.Run mName$ + ":ErrorAtt", stay
             
         Else
             mObjRef.Run "ErrorAtt", stay
         End If
-        Err.clear
+        Err.Clear
         If stay = True Then
             Reset
         Else
